tests/fixtures/valid/builtins/sorted_builtin.py
# sorted builtin
lst: list[int] = [3, 1, 4, 1, 5, 9, 2, 6]
print(sorted(lst))
