tests/fixtures/invalid/pow_str_dict_set.py
# Cannot call pow() with Str, Dict[str, int], Set[int]
x = pow("hello", {"a": 1}, {1, 2, 3})
